--- a/index.html
+++ b/index.html
@@ -105,6 +105,12 @@
                 <label for="hibrido">Carro híbrido</label>
             </div>
         </div>
+        <div>
+            <label for="birthday">Data de nascimento:</label>
+            <input type="date" name="birthday">
+        </div>
+       
+
         <input type="reset" value="Limpar">
         <input type="submit" value="Enviar">
     </form>
